syntax = "proto3";

package user;

service UserService {
  rpc FindAll (Empty) returns (UsersResponse);
  rpc FindOne (FindOneRequest) returns (UserResponse);
  rpc Create (CreateUserRequest) returns (UserResponse);
}

message Empty {}

message FindOneRequest {
  int32 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UsersResponse {
  repeated UserResponse users = 1;
}
